renaming route updating Swagger docs to match latest output
