# routes/health-routes.js
@@ -3,7 +3,7 @@ const router = express.Router();
 const controller = require("../controllers/health-controllers");
 
 router.get("/health/mortality/:region", async (req, res) => {
-  const health = await controller.getAllMortalityData(req, res);
+  const health = await controller.getRegionalMortalityData(req, res);
 
   res.send(health);
 });
